<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PreferencesLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mmamm.semesterproject.Preferences">

    <Button
        android:id="@+id/btnHome"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:text="@string/home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtHowToPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="11dp"
        android:text="@string/preferences"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/btnHome"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTheme"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginTop="35dp"
        android:text="@string/theme"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHowToPlay" />

    <RadioGroup
        android:id="@+id/RgroupTheme"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTheme">

        <RadioButton
            android:id="@+id/RbtnLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/light" />

        <RadioButton
            android:id="@+id/RbtnDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dark" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtDifficulty"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="82dp"
        android:layout_marginTop="35dp"
        android:text="@string/difficulty"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHowToPlay" />

    <RadioGroup
        android:id="@+id/RgroupDifficulty"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="82dp"
        android:layout_marginTop="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDifficulty">

        <RadioButton
            android:id="@+id/RbtnEasy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/easy" />

        <RadioButton
            android:id="@+id/RbtnMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/RbtnHard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hard" />
    </RadioGroup>

    <Button
        android:id="@+id/btnStats"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="40dp"
        android:text="@string/statistics"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RgroupDifficulty" />

    <Button
        android:id="@+id/btnHowToPlay"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="30dp"
        android:text="@string/how_to_play"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStats" />
</android.support.constraint.ConstraintLayout>
