<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mmamm.semesterproject.Statistics">

    <Button
        android:id="@+id/btnHome"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:text="@string/home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtHowToPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="11dp"
        android:text="@string/statistics"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/btnHome"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHome">

        <TableRow>

            <TextView
                android:id="@+id/txtEasy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/easy"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                android:textSize="18sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txtEasyGamesPlayed"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:text="@string/games_played"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />

            <TextView
                android:id="@+id/txtEasyGamesPlayedCount"
                android:layout_width="153dp"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/_0"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtEasyGamesWon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/games_won"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />

            <TextView
                android:id="@+id/txtEasyGamesWonCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtEasyWinStreak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longest_win_streak"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />

            <TextView
                android:id="@+id/txtEasyWinStreakCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="210dp"
        android:layout_height="88dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/medium"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtMediumGamesPlayed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/games_played"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />

            <TextView
                android:id="@+id/txtMediumGamesPlayedCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtMediumGamesWon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/games_won"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />

            <TextView
                android:id="@+id/txtMediumGamesWonCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtMediumWinStreak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longest_win_streak"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />

            <TextView
                android:id="@+id/txtMediumWinStreakCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="210dp"
        android:layout_height="89dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtHard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/hard"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtHardGamesPlayed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/games_played"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />

            <TextView
                android:id="@+id/txtHardGamesPlayedCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtHardGamesWon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/games_won"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />

            <TextView
                android:id="@+id/txtHardGamesWonCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtHardWinStreak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longest_win_streak"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />

            <TextView
                android:id="@+id/txtHardWinStreakCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnResetStats"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="117dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="25dp"
        android:onClick="resetStats"
        android:text="@string/reset_statistics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout3" />
</android.support.constraint.ConstraintLayout>
